Fixes storypin delete.  (#205)
* Changed the overlapping icon to a button. Fixed issue with function call preventing delete from working. Changed that ugly green.

* Some linting

* Linting.

* Storypin edit form cleanup.

--- a/app/ui/style/pin-sidebar.less
+++ b/app/ui/style/pin-sidebar.less
@@ -48,7 +48,7 @@
   border: 1px solid lightgrey;
   padding: 0.45em;
   border-radius: 12px;
-  background: #73AD21;
+  background: #CCCCCC;
   .heading {
     font-weight: bold;
     //text-align: center;
